--- a/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
@@ -1,57 +1,57 @@
 //Menubar strings
 "MB_SWIFT_BAR" = "SwiftBar";
-"MB_UPDATING_MENU" = "Updating…";
-"MB_LAST_UPDATED" = "Updated";
-"MB_ABOUT_SWIFT_BAR" = "About";
-"MB_ABOUT_PLUGIN" = "About";
-"MB_RUN_IN_TERMINAL" = "Run In Terminal…";
-"MB_DISABLE_PLUGIN" = "Disable Plugin";
-"MB_PREFERENCES" = "Preferences…";
-"MB_REFRESH_ALL" = "Refresh All";
-"MB_ENABLE_ALL" = "Enable All";
-"MB_DISABLE_ALL" = "Disable All";
-"MB_OPEN_PLUGINS_FOLDER" = "Open Plugin Folder…";
-"MB_CHANGE_PLUGINS_FOLDER" = "Change Plugin Folder…";
-"MB_GET_PLUGINS" = "Get Plugins...";
-"MB_SEND_FEEDBACK" = "Send Feedback...";
-"MB_SHOW_ERROR" = "Show Error";
+"MB_UPDATING_MENU" = "Bijwerken…";
+"MB_LAST_UPDATED" = "Bijgewerkt";
+"MB_ABOUT_SWIFT_BAR" = "Over";
+"MB_ABOUT_PLUGIN" = "Over";
+"MB_RUN_IN_TERMINAL" = "Uitvoeren in Terminal";
+"MB_DISABLE_PLUGIN" = "Plug-in uitschakelen";
+"MB_PREFERENCES" = "Voorkeuren…";
+"MB_REFRESH_ALL" = "Alles verversen";
+"MB_ENABLE_ALL" = "Alles inschakelen";
+"MB_DISABLE_ALL" = "Alles uitschakelen";
+"MB_OPEN_PLUGINS_FOLDER" = "Open Plug-ins Folder";
+"MB_CHANGE_PLUGINS_FOLDER" = "Wijzig Plug-ins Folder…";
+"MB_GET_PLUGINS" = "Verkrijg Plug-ins...";
+"MB_SEND_FEEDBACK" = "Stuur Feedback...";
+"MB_SHOW_ERROR" = "Toon foutmelding";
 
 //Preferences strings
-"PF_PREFERENCES" = "Preferences";
-"PF_GENERAL" = "General";
-"PF_PLUGINS" = "Plugins";
-"PF_PLUGINS_FOLDER" = "Plugin Folder";
-"PR_LAUNCH_AT_LOGIN" = "Launch at Login";
-"PF_PATH" = "Path";
-"PF_PATH_IS_NONE" = "None";
-"PF_CHANGE_PATH" = "Change";
+"PF_PREFERENCES" = "Voorkeuren";
+"PF_GENERAL" = "Algemeen";
+"PF_PLUGINS" = "Plug-ins";
+"PF_PLUGINS_FOLDER" = "Plug-ins Folder";
+"PR_LAUNCH_AT_LOGIN" = "Opstarten bij inloggen";
+"PF_PATH" = "Pad";
+"PF_PATH_IS_NONE" = "Geen";
+"PF_CHANGE_PATH" = "Wijzig";
 "PF_SHELL" = "Shell";
-"PF_HIDE_SWIFTBAR_ICON" = "Hide SwiftBar Icon";
-"PF_CHECK_FOR_UPDATES" = "Check for updates";
-"PF_NO_PLUGINS_MESSAGE" = "Plugins folder is empty";
-"PF_ENABLE_ALL" = "Enable All";
-"PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar.";
+"PF_HIDE_SWIFTBAR_ICON" = "Verberg SwiftBar Icon";
+"PF_CHECK_FOR_UPDATES" = "Controleer op updates";
+"PF_NO_PLUGINS_MESSAGE" = "Plug-ins folder is leeg";
+"PF_ENABLE_ALL" = "Alles inschakelen";
+"PF_PLUGINS_FOOTNOTE" = "Ingeschakelde plug-ins verschijnen in de menubalk.";
 
 //Plugin Repository strings
-"PR_CATEGORY" = "Category";
-"PR_PLUGIN_REPOSITORY" = "Plugin Repository";
-"PR_REFRESHING_DATA_MESSAGE" = "Refreshing repository data…";
-"PR_DEPENDENCIES" = "Dependencies";
-"PR_PLUGIN_SOURCE" = "Source";
-"PR_ABOUT_PLUGIN" = "About";
-"PR_AUTORH_PREPOSITION" = "by";
-"PR_INSTALL_STATUS_INSTALL" = "Install";
-"PR_INSTALL_STATUS_INSTALLED" = "Installed";
-"PR_INSTALL_STATUS_FAILED" = "Failed";
-"PR_INSTALL_STATUS_DOWNLOADING" = "Downloading";
+"PR_CATEGORY" = "Categorie";
+"PR_PLUGIN_REPOSITORY" = "Plug-in verzameling";
+"PR_REFRESHING_DATA_MESSAGE" = "Verversen verzameling gegevens…";
+"PR_DEPENDENCIES" = "Afhankelijkheden";
+"PR_PLUGIN_SOURCE" = "Bron";
+"PR_ABOUT_PLUGIN" = "Over";
+"PR_AUTORH_PREPOSITION" = "door";
+"PR_INSTALL_STATUS_INSTALL" = "Installeren";
+"PR_INSTALL_STATUS_INSTALLED" = "Geïnstalleerd";
+"PR_INSTALL_STATUS_FAILED" = "Mislukt";
+"PR_INSTALL_STATUS_DOWNLOADING" = "Downloaden";
 
 
 //App strings
-"APP_CHOOSE_PLUGIN_FOLDER_TITLE" = "Choose plugin folder";
-"APP_FOLDER_NOT_ALLOWED_MESSAGE" = "Can't use this folder as SwiftBar plugins location";
-"APP_FOLDER_NOT_ALLOWED_ACTION" = "Choose New Location";
-"APP_CHOOSE_PLUGIN_FOLDER_MESSAGE" = "Set SwiftBar Plugins Location";
-"APP_CHOOSE_PLUGIN_FOLDER_INFO" = "Select a folder to store the plugins repository";
-"APP_QUIT" = "Quite SwiftBar";
+"APP_CHOOSE_PLUGIN_FOLDER_TITLE" = "Kies plug-in folder";
+"APP_FOLDER_NOT_ALLOWED_MESSAGE" = "Deze folder kan niet gebruikt worden voor SwiftBar plug-ins";
+"APP_FOLDER_NOT_ALLOWED_ACTION" = "Kies nieuwe locatie";
+"APP_CHOOSE_PLUGIN_FOLDER_MESSAGE" = "Kies SwiftBar plug-ins Locatie";
+"APP_CHOOSE_PLUGIN_FOLDER_INFO" = "Selecteer een folder voor de plug-ins verzameling";
+"APP_QUIT" = "Stop SwiftBar";
 "OK" = "OK";
-"CANCEL" = "Cancel";
+"CANCEL" = "Annuleer";
