--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -52,6 +52,6 @@
 "APP_FOLDER_NOT_ALLOWED_ACTION" = "Choose New Location";
 "APP_CHOOSE_PLUGIN_FOLDER_MESSAGE" = "Set SwiftBar Plugins Location";
 "APP_CHOOSE_PLUGIN_FOLDER_INFO" = "Select a folder to store the plugins repository";
-"APP_QUIT" = "Quite SwiftBar";
+"APP_QUIT" = "Quit SwiftBar";
 "OK" = "OK";
 "CANCEL" = "Cancel";
