--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "PF_CHECK_FOR_UPDATES" = "Check for updates";
 "PF_NO_PLUGINS_MESSAGE" = "Plugins folder is empty";
 "PF_ENABLE_ALL" = "Enable All";
-"PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar.";
+"PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar";
 
 //Plugin Repository strings
 "PR_CATEGORY" = "Category";
