Update Dutch localization strings

--- a/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
@@ -4,80 +4,81 @@
 "MB_LAST_UPDATED" = "Bijgewerkt";
 "MB_ABOUT_SWIFT_BAR" = "Over";
 "MB_ABOUT_PLUGIN" = "Over";
-"MB_RUN_IN_TERMINAL" = "Uitvoeren in Terminal";
-"MB_DISABLE_PLUGIN" = "Plug-in uitschakelen";
-"MB_DDEBUG_PLUGIN" = "Debug Plugin";
+"MB_RUN_IN_TERMINAL" = "Voer uit in Terminal";
+"MB_DISABLE_PLUGIN" = "Schakel plug-in uit";
+"MB_DDEBUG_PLUGIN" = "Debug plug-in";
 "MB_PREFERENCES" = "Voorkeuren…";
-"MB_REFRESH_ALL" = "Alles verversen";
-"MB_ENABLE_ALL" = "Alles inschakelen";
-"MB_DISABLE_ALL" = "Alles uitschakelen";
-"MB_OPEN_PLUGINS_FOLDER" = "Open Plug-ins Folder";
-"MB_CHANGE_PLUGINS_FOLDER" = "Wijzig Plug-ins Folder…";
-"MB_GET_PLUGINS" = "Verkrijg Plug-ins...";
-"MB_SEND_FEEDBACK" = "Stuur Feedback...";
+"MB_REFRESH_ALL" = "Ververs alle plug-ins";
+"MB_ENABLE_ALL" = "Schakel alle in";
+"MB_DISABLE_ALL" = "Schakel alle uit";
+"MB_OPEN_PLUGINS_FOLDER" = "Open map voor plug-ins";
+"MB_CHANGE_PLUGINS_FOLDER" = "Wijzig map voor plug-ins…";
+"MB_GET_PLUGINS" = "Plug-ins verkrijgen…";
+"MB_SEND_FEEDBACK" = "Stuur feedback…";
 "MB_SHOW_ERROR" = "Toon foutmelding";
 
 //Preferences strings
 "PF_PREFERENCES" = "Voorkeuren";
 "PF_GENERAL" = "Algemeen";
 "PF_PLUGINS" = "Plug-ins";
-"PF_PLUGINS_FOLDER" = "Plug-ins Folder";
+"PF_PLUGINS_FOLDER" = "Map voor plug-ins";
 "PR_LAUNCH_AT_LOGIN" = "Opstarten bij inloggen";
 "PF_PATH" = "Pad";
 "PF_PATH_IS_NONE" = "Geen";
-"PF_CHANGE_PATH" = "Wijzig...";
-"PF_SHELL" = "Shell";
-"PF_HIDE_SWIFTBAR_ICON" = "Verberg SwiftBar Icon";
-"PF_CHECK_FOR_UPDATE" = "Update";
-"PF_CHECK_FOR_UPDATES" = "Controleer op updates";
-"PF_NO_PLUGINS_MESSAGE" = "Plug-ins folder is leeg";
-"PF_ENABLE_ALL" = "Alles inschakelen";
+"PF_CHANGE_PATH" = "Wijzig…";
+"PF_SHELL" = "Shell-applicatie";
+"PF_HIDE_SWIFTBAR_ICON" = "Verberg SwiftBar-icoon";
+"PF_CHECK_FOR_UPDATE" = "Updates";
+"PF_CHECK_FOR_UPDATES" = "Controleer op updates…";
+"PF_NO_PLUGINS_MESSAGE" = "Plug-insmap is leeg";
+"PF_ENABLE_ALL" = "Alle plug-ins inschakelen";
 "PF_PLUGINS_FOOTNOTE" = "Ingeschakelde plug-ins verschijnen in de menubalk.";
 
 //Plugin Repository strings
 "PR_CATEGORY" = "Categorie";
-"PR_PLUGIN_REPOSITORY" = "Plug-in verzameling";
-"PR_REFRESHING_DATA_MESSAGE" = "Verversen verzameling gegevens…";
+"PR_PLUGIN_REPOSITORY" = "Plug-inverzameling";
+"PR_REFRESHING_DATA_MESSAGE" = "Verversen verzamelingsgegevens…";
 "PR_DEPENDENCIES" = "Afhankelijkheden";
 "PR_PLUGIN_SOURCE" = "Bron";
 "PR_ABOUT_PLUGIN" = "Over";
 "PR_AUTORH_PREPOSITION" = "door";
-"PR_INSTALL_STATUS_INSTALL" = "Installeren";
+"PR_INSTALL_STATUS_INSTALL" = "Installeer";
 "PR_INSTALL_STATUS_INSTALLED" = "Geïnstalleerd";
 "PR_INSTALL_STATUS_FAILED" = "Mislukt";
-"PR_INSTALL_STATUS_DOWNLOADING" = "Downloaden";
+"PR_INSTALL_STATUS_DOWNLOADING" = "Downloaden…";
 
 
 //App strings
-"APP_CHOOSE_PLUGIN_FOLDER_TITLE" = "Kies plug-in folder";
-"APP_FOLDER_NOT_ALLOWED_MESSAGE" = "Deze folder kan niet gebruikt worden voor SwiftBar plug-ins";
-"APP_FOLDER_NOT_ALLOWED_ACTION" = "Kies nieuwe locatie";
-"APP_CHOOSE_PLUGIN_FOLDER_MESSAGE" = "Kies SwiftBar plug-ins Locatie";
-"APP_CHOOSE_PLUGIN_FOLDER_INFO" = "Selecteer een folder voor de plug-ins verzameling";
+"APP_CHOOSE_PLUGIN_FOLDER_TITLE" = "Kies map voor plug-ins";
+"APP_FOLDER_NOT_ALLOWED_MESSAGE" = "Deze map kan niet gebruikt worden voor SwiftBar plug-ins";
+"APP_FOLDER_NOT_ALLOWED_ACTION" = "Kies een andere map";
+"APP_FOLDER_HAS_TOO_MANY_FILES_MESSAGE" = "Wauw! De map die je hebt gekozen bevat heel veel bestanden. Kies een andere map, alsjeblieft. Als je een map genaamd 'node_modules' hebt die vereist is voor een plug-in, verberg die dan.";
+"APP_CHOOSE_PLUGIN_FOLDER_MESSAGE" = "Kies een locatie voor SwiftBar plug-ins";
+"APP_CHOOSE_PLUGIN_FOLDER_INFO" = "Selecteer een map voor de plug-inverzameling";
 "APP_QUIT" = "Stop SwiftBar";
 "OK" = "OK";
 "CANCEL" = "Annuleer";
 
 // Plugin Repository Categories
 "CAT_AWS" = "AWS";
-"CAT_CRYPTOCURRENCY" = "Cryptocurrency";
-"CAT_DEV" = "Dev";
-"CAT_E-COMMERCE" = "E-Commerce";
-"CAT_EMAIL" = "Email";
-"CAT_ENVIRONMENT" = "Environment";
-"CAT_FINANCE" = "Finance";
+"CAT_CRYPTOCURRENCY" = "Cryptovaluta";
+"CAT_DEV" = "Ontwikkelaar";
+"CAT_E-COMMERCE" = "E-commerce";
+"CAT_EMAIL" = "E-mail";
+"CAT_ENVIRONMENT" = "Natuur";
+"CAT_FINANCE" = "Financiën";
 "CAT_GAMES" = "Games";
 "CAT_LIFESTYLE" = "Lifestyle";
 "CAT_MESSENGER" = "Messenger";
-"CAT_MUSIC" = "Music";
-"CAT_NETWORK" = "Network";
-"CAT_POLITICS" = "Politics";
-"CAT_SCIENCE" = "Science";
-"CAT_SPORTS" = "Sports";
-"CAT_SYSTEM" = "System";
-"CAT_TIME" = "Time";
+"CAT_MUSIC" = "Muziek";
+"CAT_NETWORK" = "Netwerk";
+"CAT_POLITICS" = "Politiek";
+"CAT_SCIENCE" = "Wetenschap";
+"CAT_SPORTS" = "Sport";
+"CAT_SYSTEM" = "Systeem";
+"CAT_TIME" = "Tijd";
 "CAT_TOOLS" = "Tools";
-"CAT_TRAVEL" = "Travel";
+"CAT_TRAVEL" = "Reizen";
 "CAT_TUTORIAL" = "Tutorial";
-"CAT_WEATHER" = "Weather";
+"CAT_WEATHER" = "Weer";
 "CAT_WEB" = "Web";
