--- a/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
@@ -62,24 +62,24 @@
 
 // Plugin Repository Categories
 "CAT_AWS" = "AWS";
-"CAT_CRYPTOCURRENCY" = "Cryptocurrency";
-"CAT_DEV" = "Dev";
-"CAT_E-COMMERCE" = "E-Commerce";
-"CAT_EMAIL" = "Email";
-"CAT_ENVIRONMENT" = "Environment";
-"CAT_FINANCE" = "Finance";
-"CAT_GAMES" = "Games";
-"CAT_LIFESTYLE" = "Lifestyle";
-"CAT_MESSENGER" = "Messenger";
-"CAT_MUSIC" = "Music";
-"CAT_NETWORK" = "Network";
-"CAT_POLITICS" = "Politics";
-"CAT_SCIENCE" = "Science";
-"CAT_SPORTS" = "Sports";
-"CAT_SYSTEM" = "System";
-"CAT_TIME" = "Time";
-"CAT_TOOLS" = "Tools";
-"CAT_TRAVEL" = "Travel";
-"CAT_TUTORIAL" = "Tutorial";
-"CAT_WEATHER" = "Weather";
-"CAT_WEB" = "Web";
+"CAT_CRYPTOCURRENCY" = "Kriptovaluta";
+"CAT_DEV" = "Razvoj";
+"CAT_E-COMMERCE" = "E-trgovina";
+"CAT_EMAIL" = "E-mail";
+"CAT_ENVIRONMENT" = "Okruženje";
+"CAT_FINANCE" = "Financije";
+"CAT_GAMES" = "Igre";
+"CAT_LIFESTYLE" = "Životni stil";
+"CAT_MESSENGER" = "Poruke";
+"CAT_MUSIC" = "Glazba";
+"CAT_NETWORK" = "Mreža";
+"CAT_POLITICS" = "Politika";
+"CAT_SCIENCE" = "Znanost";
+"CAT_SPORTS" = "Sport";
+"CAT_SYSTEM" = "Sustav";
+"CAT_TIME" = "Vrijeme";
+"CAT_TOOLS" = "Alati";
+"CAT_TRAVEL" = "Putovanje";
+"CAT_TUTORIAL" = "Vježbe";
+"CAT_WEATHER" = "Vremenska prognoza";
+"CAT_WEB" = "Internet";
