Adding option to set shell #227

--- a/SwiftBar/Resources/Localization/de.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/de.lproj/Localizable.strings
@@ -27,6 +27,7 @@
 "PF_PATH_IS_NONE" = "None";
 "PF_CHANGE_PATH" = "Change...";
 "PF_SHELL" = "Shell";
+"PF_TERMINAL" = "Terminal";
 "PF_HIDE_SWIFTBAR_ICON" = "Hide SwiftBar Icon";
 "PF_CHECK_FOR_UPDATE" = "Update";
 "PF_CHECK_FOR_UPDATES" = "Check for updates";
