--- a/SwiftBar/Resources/Localization/ru.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/ru.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "PF_HIDE_SWIFTBAR_ICON" = "Скрыть иконку SwiftBar";
 "PF_CHECK_FOR_UPDATE" = "Обновить";
 "PF_CHECK_FOR_UPDATES" = "Проверить обновления";
+"PR_INCLUDE_BETA_UPDATES" = "Включая бета версии";
 "PF_NO_PLUGINS_MESSAGE" = "Папка плагина пуста";
 "PF_ENABLE_ALL" = "Включить все";
 "PF_PLUGINS_FOOTNOTE" = "Включенные плагины видны в панели меню.";
