--- a/SwiftBar/Resources/Localization/de.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/de.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "PF_HIDE_SWIFTBAR_ICON" = "Hide SwiftBar Icon";
 "PF_CHECK_FOR_UPDATE" = "Update";
 "PF_CHECK_FOR_UPDATES" = "Check for updates";
+"PR_INCLUDE_BETA_UPDATES" = "Enthalten Vorabversionen";
 "PF_NO_PLUGINS_MESSAGE" = "Plugins folder is empty";
 "PF_ENABLE_ALL" = "Enable All";
 "PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar.";
