--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -30,7 +30,8 @@
 "PF_TERMINAL" = "Terminal";
 "PF_HIDE_SWIFTBAR_ICON" = "Hide SwiftBar Icon";
 "PF_CHECK_FOR_UPDATE" = "Update";
-"PF_CHECK_FOR_UPDATES" = "Check for updates";
+"PF_CHECK_FOR_UPDATES" = "Check for Updates";
+"PR_INCLUDE_BETA_UPDATES" = "Include Pre-Release Versions";
 "PF_NO_PLUGINS_MESSAGE" = "Plugins folder is empty";
 "PF_ENABLE_ALL" = "Enable All";
 "PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar.";
