Fix title case in English localization

--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 "MB_LAST_UPDATED" = "Updated";
 "MB_ABOUT_SWIFT_BAR" = "About";
 "MB_ABOUT_PLUGIN" = "About";
-"MB_RUN_IN_TERMINAL" = "Run In Terminal…";
+"MB_RUN_IN_TERMINAL" = "Run in Terminal…";
 "MB_DISABLE_PLUGIN" = "Disable Plugin";
 "MB_DDEBUG_PLUGIN" = "Debug Plugin";
 "MB_PREFERENCES" = "Preferences…";
