Fix title case in Spanish localization

--- a/SwiftBar/Resources/Localization/es.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/es.lproj/Localizable.strings
@@ -5,40 +5,40 @@
 "MB_ABOUT_SWIFT_BAR" = "Acerca";
 "MB_ABOUT_PLUGIN" = "Acerca";
 "MB_RUN_IN_TERMINAL" = "Ejecutar en la Terminal…";
-"MB_DISABLE_PLUGIN" = "Deshabilitar complemento";
-"MB_DDEBUG_PLUGIN" = "Depurar complemento";
+"MB_DISABLE_PLUGIN" = "Deshabilitar Complemento";
+"MB_DDEBUG_PLUGIN" = "Depurar Complemento";
 "MB_PREFERENCES" = "Preferencias…";
-"MB_REFRESH_ALL" = "Actualizar todo";
-"MB_ENABLE_ALL" = "Habilitar todo";
-"MB_DISABLE_ALL" = "Deshabilitar todo";
-"MB_OPEN_PLUGINS_FOLDER" = "Abrir carpeta de complementos…";
-"MB_CHANGE_PLUGINS_FOLDER" = "Cambiar carpeta de complementos…";
-"MB_GET_PLUGINS" = "Obtener complementos...";
-"MB_SEND_FEEDBACK" = "Enviar comentarios...";
-"MB_SHOW_ERROR" = "Mostrar error";
+"MB_REFRESH_ALL" = "Actualizar Todo";
+"MB_ENABLE_ALL" = "Habilitar Todo";
+"MB_DISABLE_ALL" = "Deshabilitar Todo";
+"MB_OPEN_PLUGINS_FOLDER" = "Abrir Carpeta de Complementos…";
+"MB_CHANGE_PLUGINS_FOLDER" = "Cambiar Carpeta de Complementos…";
+"MB_GET_PLUGINS" = "Obtener Complementos...";
+"MB_SEND_FEEDBACK" = "Enviar Comentarios...";
+"MB_SHOW_ERROR" = "Mostrar Error";
 
 //Preferences strings
 "PF_PREFERENCES" = "Preferencias";
 "PF_GENERAL" = "General";
 "PF_PLUGINS" = "Complementos";
-"PF_PLUGINS_FOLDER" = "Carpeta de complementos";
-"PR_LAUNCH_AT_LOGIN" = "Lanzar al iniciar sesión";
+"PF_PLUGINS_FOLDER" = "Carpeta de Complementos";
+"PR_LAUNCH_AT_LOGIN" = "Lanzar al Iniciar Sesión";
 "PF_PATH" = "Ruta";
 "PF_PATH_IS_NONE" = "Ninguno";
 "PF_CHANGE_PATH" = "Cambiar...";
 "PF_SHELL" = "Shell";
 "PF_TERMINAL" = "Terminal";
-"PF_HIDE_SWIFTBAR_ICON" = "Ocultar ícono SwiftBar";
+"PF_HIDE_SWIFTBAR_ICON" = "Ocultar Ícono SwiftBar";
 "PF_CHECK_FOR_UPDATE" = "Actualizar";
-"PF_CHECK_FOR_UPDATES" = "Verificar si hay actualizaciones";
-"PR_INCLUDE_BETA_UPDATES" = "Incluir versiones beta";
+"PF_CHECK_FOR_UPDATES" = "Verificar Actualizaciones";
+"PR_INCLUDE_BETA_UPDATES" = "Incluir Versiones Beta";
 "PF_NO_PLUGINS_MESSAGE" = "La carpeta de los complementos está vacía";
 "PF_ENABLE_ALL" = "Habilitar todo";
 "PF_PLUGINS_FOOTNOTE" = "Los complementos habilitados aparecen en la barra de menú.";
 
 //Plugin Repository strings
 "PR_CATEGORY" = "Categoría";
-"PR_PLUGIN_REPOSITORY" = "Repositorio del complemento";
+"PR_PLUGIN_REPOSITORY" = "Repositorio del Complemento";
 "PR_REFRESHING_DATA_MESSAGE" = "Actualizando datos del repositorio…";
 "PR_DEPENDENCIES" = "Dependencias";
 "PR_PLUGIN_SOURCE" = "Fuente";
@@ -65,12 +65,12 @@
 "CAT_AWS" = "AWS";
 "CAT_CRYPTOCURRENCY" = "Criptomonedas";
 "CAT_DEV" = "Dev";
-"CAT_E-COMMERCE" = "Comercio electrónico";
-"CAT_EMAIL" = "Correo electrónico";
+"CAT_E-COMMERCE" = "Comercio Electrónico";
+"CAT_EMAIL" = "Correo Electrónico";
 "CAT_ENVIRONMENT" = "Medioambiente";
 "CAT_FINANCE" = "Finanzas";
 "CAT_GAMES" = "Juegos";
-"CAT_LIFESTYLE" = "Estilo de vida";
+"CAT_LIFESTYLE" = "Estilo de Vida";
 "CAT_MESSENGER" = "Messenger";
 "CAT_MUSIC" = "Música";
 "CAT_NETWORK" = "Red";
