--- a/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -35,6 +35,8 @@
 "PF_NO_PLUGINS_MESSAGE" = "插件目录是空的";
 "PF_ENABLE_ALL" = "开启所有";
 "PF_PLUGINS_FOOTNOTE" = "菜单栏中会显示已启用的插件。";
+"PF_MENUBAR_ITEM" = "Menu Bar Item";
+"PF_DIM_ON_MANUAL_REFRESH" = "Dim on Manual Refresh";
 
 //Plugin Repository strings
 "PR_CATEGORY" = "类别";
