--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -20,7 +20,9 @@
 //Preferences strings
 "PF_PREFERENCES" = "Preferences";
 "PF_GENERAL" = "General";
-"PF_PLUGINS" = "Plugins";
+"PF_PLUGINS" = "Code Plugins";
+"PF_SHORTCUT_PLUGINS" = "Shortcut Plugins";
+"PF_ABOUT" = "About";
 "PF_PLUGINS_FOLDER" = "Plugin Folder";
 "PR_LAUNCH_AT_LOGIN" = "Launch at Login";
 "PF_PATH" = "Path";
