--- a/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 "MB_RUN_IN_TERMINAL" = "Pokreni u Terminalu …";
 "MB_DISABLE_PLUGIN" = "Deaktiviraj dodatak";
 "MB_DDEBUG_PLUGIN" = "Otklanjanje grešaka dodatka";
+"MB_TERMINATE_EPH" = "Terminate Plugin";
 "MB_PREFERENCES" = "Postavke …";
 "MB_REFRESH_ALL" = "Osvježi sve";
 "MB_ENABLE_ALL" = "Aktiviraj sve";
@@ -44,7 +45,7 @@
 "PF_SHORTCUTS_COLUMN_REPEAT" = "Repeat";
 "PF_SHORTCUTS_DELETE_BUTTON" = "Delete";
 "PF_SHORTCUTS_DELETE_CONFIRMATION" = "Are you sure you want to delete '<selectedPlugin>'?";
-"PF_SHORTCUTS_ADD_BUTTON" = "Cancel";
+"PF_SHORTCUTS_ADD_BUTTON" = "Add";
 "PF_SHORTCUTS_COLUMN_TOGGLE_HELP" = "Enable\Disable menu bar item";
 "PF_SHORTCUTS_COLUMN_REFRESH_HELP" = "Refresh menu bar item";
 "PF_ADD_SHORTCUT_PLUGIN_HEADER" = "Add Shortcut Plugin";
