--- a/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/hr.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 //Preferences strings
 "PF_PREFERENCES" = "Postavke";
 "PF_GENERAL" = "Opće";
+"PF_ADVANCED" = "Advanced";
 "PF_PLUGINS" = "Dodatci";
 "PF_SHORTCUT_PLUGINS" = "Shortcut Plugins";
 "PF_ABOUT" = "About";
@@ -32,6 +33,7 @@
 "PF_SHELL" = "Naredbeni redak";
 "PF_TERMINAL" = "Terminal";
 "PF_HIDE_SWIFTBAR_ICON" = "Sakrij ikonu SwiftBara";
+"PF_STEALTH_MODE" = "Hide SwiftBar in the menu bar";
 "PF_CHECK_FOR_UPDATE" = "Aktualiziraj";
 "PF_CHECK_FOR_UPDATES" = "Traži nove verzije";
 "PR_INCLUDE_BETA_UPDATES" = "Uključuju Verzije Prije Izdanja";
@@ -42,7 +44,7 @@
 "PF_DIM_ON_MANUAL_REFRESH" = "Dim on Manual Refresh";
 "PF_SHORTCUTS_COLUMN_NAME" = "Name";
 "PF_SHORTCUTS_COLUMN_SHORTCUT" = "Shortcut";
-"PF_SHORTCUTS_COLUMN_REPEAT" = "Repeat";
+"PF_SHORTCUTS_COLUMN_REFRESH" = "Refresh";
 "PF_SHORTCUTS_DELETE_BUTTON" = "Delete";
 "PF_SHORTCUTS_DELETE_CONFIRMATION" = "Are you sure you want to delete '<selectedPlugin>'?";
 "PF_SHORTCUTS_ADD_BUTTON" = "Add";
