Update Simplified Chinese localization

--- a/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 "PF_DIM_ON_MANUAL_REFRESH" = "手动刷新时变暗";
 "PF_SHORTCUTS_COLUMN_NAME" = "名称";
 "PF_SHORTCUTS_COLUMN_SHORTCUT" = "快捷指令";
-"PF_SHORTCUTS_COLUMN_REFRESH" = "重复";
+"PF_SHORTCUTS_COLUMN_REFRESH" = "刷新";
 "PF_SHORTCUTS_DELETE_BUTTON" = "删除";
 "PF_SHORTCUTS_DELETE_CONFIRMATION" = "你确定要删除 '<selectedPlugin>' 吗？";
 "PF_SHORTCUTS_ADD_BUTTON" = "添加";
