--- a/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/en.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "PF_CHECK_FOR_UPDATE" = "Update";
 "PF_CHECK_FOR_UPDATES" = "Check for Updates";
 "PR_INCLUDE_BETA_UPDATES" = "Include Pre-Release Versions";
+"PR_SHARE_CRASH_REPORTS" = "Share Crash Reports";
 "PF_NO_PLUGINS_MESSAGE" = "Plugins folder is empty";
 "PF_ENABLE_ALL" = "Enable All";
 "PF_PLUGINS_FOOTNOTE" = "Enabled plugins appear in the menu bar.";
