--- a/SwiftBar/Resources/Localization/es.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/es.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "PF_CHECK_FOR_UPDATE" = "Actualizar";
 "PF_CHECK_FOR_UPDATES" = "Verificar Actualizaciones";
 "PR_INCLUDE_BETA_UPDATES" = "Incluir Versiones Beta";
+"PR_SHARE_CRASH_REPORTS" = "Compartir informes de fallos";
 "PF_NO_PLUGINS_MESSAGE" = "La carpeta de los complementos está vacía";
 "PF_ENABLE_ALL" = "Habilitar todo";
 "PF_PLUGINS_FOOTNOTE" = "Los complementos habilitados aparecen en la barra de menú.";
