--- a/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/nl.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "PF_CHECK_FOR_UPDATE" = "Updates";
 "PF_CHECK_FOR_UPDATES" = "Controleer op updates…";
 "PR_INCLUDE_BETA_UPDATES" = "Pre-releaseversies Opnemen";
+"PR_SHARE_CRASH_REPORTS" = "Crashrapporten delen";
 "PF_NO_PLUGINS_MESSAGE" = "Plug-insmap is leeg";
 "PF_ENABLE_ALL" = "Alle plug-ins inschakelen";
 "PF_PLUGINS_FOOTNOTE" = "Ingeschakelde plug-ins verschijnen in de menubalk.";
