Update Simplified Chinese localization (#383)
* Update Simplified Chinese localization

--- a/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -21,7 +21,7 @@
 //Preferences strings
 "PF_PREFERENCES" = "偏好设置";
 "PF_GENERAL" = "通用";
-"PF_ADVANCED" = "Advanced";
+"PF_ADVANCED" = "高级";
 "PF_PLUGINS" = "插件";
 "PF_SHORTCUT_PLUGINS" = "快捷指令插件";
 "PF_ABOUT" = "关于";
@@ -33,7 +33,7 @@
 "PF_SHELL" = "命令行解释器";
 "PF_TERMINAL" = "终端";
 "PF_HIDE_SWIFTBAR_ICON" = "隐藏 SwiftBar 图标";
-"PF_STEALTH_MODE" = "Hide SwiftBar in the menu bar";
+"PF_STEALTH_MODE" = "在菜单栏隐藏 SwiftBar";
 "PF_CHECK_FOR_UPDATE" = "更新";
 "PF_CHECK_FOR_UPDATES" = "检查更新";
 "PR_INCLUDE_BETA_UPDATES" = "包括预发布版本";
@@ -45,7 +45,7 @@
 "PF_DIM_ON_MANUAL_REFRESH" = "手动刷新时变暗";
 "PF_SHORTCUTS_COLUMN_NAME" = "名称";
 "PF_SHORTCUTS_COLUMN_SHORTCUT" = "快捷指令";
-"PF_SHORTCUTS_COLUMN_REFRESH" = "重复";
+"PF_SHORTCUTS_COLUMN_REFRESH" = "刷新";
 "PF_SHORTCUTS_DELETE_BUTTON" = "删除";
 "PF_SHORTCUTS_DELETE_CONFIRMATION" = "你确定要删除 '<selectedPlugin>' 吗？";
 "PF_SHORTCUTS_ADD_BUTTON" = "添加";
