Fixed typos in Russian localization (#413)
* fixed typo in russian translation

* found another typo

--- a/SwiftBar/Resources/Localization/ru.lproj/Localizable.strings
+++ b/SwiftBar/Resources/Localization/ru.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "PF_SHORTCUT_PLUGINS" = "Shortcut Plugins";
 "PF_ABOUT" = "About";
 "PF_PLUGINS_FOLDER" = "Папка с плагином";
-"PR_LAUNCH_AT_LOGIN" = "Запускать при входе в систеу";
+"PR_LAUNCH_AT_LOGIN" = "Запускать при входе в систему";
 "PF_PATH" = "Путь";
 "PF_PATH_IS_NONE" = "Путь не указан";
 "PF_CHANGE_PATH" = "Изменить...";
@@ -71,7 +71,7 @@
 "PR_INSTALL_STATUS_INSTALL" = "Установить";
 "PR_INSTALL_STATUS_INSTALLED" = "Установлен";
 "PR_INSTALL_STATUS_FAILED" = "Ошибка";
-"PR_INSTALL_STATUS_DOWNLOADING" = "Загружеается";
+"PR_INSTALL_STATUS_DOWNLOADING" = "Загружается";
 
 
 //App strings
